fixed the issue where founders names are being seen on mobile because of the bottom property being too high

--- a/components/card.module.scss
+++ b/components/card.module.scss
@@ -76,13 +76,18 @@
       width: 220px;
       height: 300px;
     }
+    .admincard__info{
+      bottom: -46%;
+    }
     .admincard__info h2 {
-      font-size: 1rem;
+      font-size: 0.9rem;
+    }
+    .admincard:hover > .admincard__info {
+      bottom: -3%;
     }
     .more_button{
-      width: 0px;
+      width: 220px;
       height: 0px;
-      margin-left: 105px;
     }
   }
   
